<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="false">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.company.HeadFragment">

    <androidx.cardview.widget.CardView
            android:layout_width="417dp"
            android:layout_height="254dp"
            app:layout_constraintTop_toBottomOf="@id/headChamp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/headTeam" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp">
        <TextView
                android:text="Wytrzymałość: 5/10 Twardość: 6/10 Ocena: 4/10"
                android:layout_width="144dp"
                android:layout_height="wrap_content" android:id="@+id/textView9"
                android:layout_marginLeft="100dp" android:layout_marginTop="30dp"/>
        <ImageView
                android:layout_width="91dp"
                android:layout_height="214dp"
                app:srcCompat="@drawable/head_team"
        />
        <TextView
                android:text="@string/head_team"
                android:id="@+id/headTe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:textStyle="bold"/>
        <TextView
                android:layout_width="311dp"
                android:layout_height="168dp"
                android:text="Najwyższej jakości piłki przeznaczone do gry klubowej i rekreacyjnej. Piłki ciśnieniowe, standardowej wielkości, przeznaczone do gry na wszystkich nawierzchniach. Zatwierdzone przez ITF. W puszce znajdują się 4 piłki."
                android:layout_margin="100dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="417dp"
            android:layout_height="254dp"
            app:layout_constraintTop_toBottomOf="@+id/headTour"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/headChamp">
        <TextView
                android:text="Wytrzymałość: 7/10 Twardość: 6/10 Ocena: 6/10"
                android:layout_width="144dp"
                android:layout_height="wrap_content" android:id="@+id/textView9"
                android:layout_marginLeft="100dp" android:layout_marginTop="30dp"/>
        <ImageView
                android:layout_width="91dp"
                android:layout_height="214dp"
                app:srcCompat="@drawable/head_championship"
        />
        <TextView
                android:text="@string/head_championship"
                android:id="@+id/headCha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:textStyle="bold"/>
        <TextView
                android:layout_width="311dp"
                android:layout_height="168dp"
                android:text="Najwyższej jakości piłki przeznaczone do gry klubowej. Piłki ciśnieniowe, standardowej wielkości. Przeznaczone do gry na wszystkich nawierzchniach. Zrobiona z filcu o podwyższonej gęstości. Zatwierdzone przez ITF. W puszce znajdują się 4 piłki."
                android:layout_margin="100dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="417dp"
            android:layout_height="254dp"
            app:layout_constraintTop_toBottomOf="@+id/headPro"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/headTour">
        <TextView
                android:text="Wytrzymałość: 6/10 Twardość: 7/10 Ocena: 7/10"
                android:layout_width="144dp"
                android:layout_height="wrap_content" android:id="@+id/textView9"
                android:layout_marginLeft="100dp" android:layout_marginTop="30dp"/>
        <ImageView
                android:layout_width="91dp"
                android:layout_height="214dp"
                app:srcCompat="@drawable/head_tour"
        />
        <TextView
                android:text="@string/head_tour"
                android:id="@+id/headTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:textStyle="bold"/>
        <TextView
                android:layout_width="273dp"
                android:layout_height="115dp"
                android:text="Preferowana za swoją żywotność jak również maksymalną kontrolę i rotację. Flagowa piłka HEAD serii Tournament z nową technologią Encore™ dającą większą trwałość oraz filcem SmartOptik™ dla lepszej widoczności. "
                android:layout_margin="100dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="417dp"
            android:layout_height="254dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/headPro" app:layout_constraintTop_toTopOf="parent"
    >
        <TextView
                android:text="Wytrzymałość: 7/10 Twardość: 7/10 Ocena: 7/10"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:layout_marginTop="30dp"/>
        <ImageView
                android:layout_width="91dp"
                android:layout_height="214dp"
                app:srcCompat="@drawable/head_pro"
        />
        <TextView
                android:text="@string/head_pro"
                android:id="@+id/headPr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:textStyle="bold"/>
        <TextView
                android:layout_width="306dp"
                android:layout_height="141dp"
                android:text="Piłka Head Pro ma poprawione właściwości wpływające na przyjemność z gry. Wyposażona w pleciony filc Smart Optik dla lepszej widoczności oraz specjalną kompozycję gumy dla większej wytrzymałości - technologia Encore. Piłki zatwierdzone przez ITF. Puszka zawiera cztery piłki."
                android:layout_margin="100dp"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>