<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="false">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.company.WilsonFragment"
>
    <androidx.cardview.widget.CardView
            android:layout_width="417dp"
            android:layout_height="254dp"
            app:layout_constraintTop_toBottomOf="@id/wilsonRGClay"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/wilsonRG" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp">
        <TextView
                android:text="Wytrzymałość: 7/10 Twardość: 6/10 Ocena: 7.5/10"
                android:layout_width="144dp"
                android:layout_height="wrap_content" android:id="@+id/textView9"
                android:layout_marginLeft="100dp" android:layout_marginTop="30dp"/>
        <ImageView
                android:layout_width="91dp"
                android:layout_height="214dp"
                app:srcCompat="@drawable/wilson_rg_all"
        />
        <TextView
                android:text="@string/wilson_roland_garros_all_court"
                android:id="@+id/wilsonRGAC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:textStyle="bold"/>
        <TextView
                android:layout_width="311dp"
                android:layout_height="168dp"
                android:text="Piłki tenisowe Wilson Roland Garros All Court. Piłka klasy Premium w mocno jaskrawym żółtym filcu zapewnia lepszą widoczność a unikalne włókno z filcu, zapewniające doskonały komfort i łatwość gry. Dodatkowo charakteryzuje się długą wytrzymałością. Zaakceptowana przez ITF. Certyfikat USTA. Konstrukcja piłek dedykowana na wszystkie rodzaje nawierzchni."
                android:layout_margin="100dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="417dp"
            android:layout_height="254dp"
            app:layout_constraintTop_toBottomOf="@id/wilsonTriniti"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/wilsonRGClay">
        <TextView
                android:text="Wytrzymałość: 6/10 Twardość: 6/10 Ocena: 7/10"
                android:layout_width="144dp"
                android:layout_height="wrap_content" android:id="@+id/textView9"
                android:layout_marginLeft="100dp" android:layout_marginTop="30dp"/>
        <ImageView
                android:layout_width="91dp"
                android:layout_height="214dp"
                app:srcCompat="@drawable/wilson_rg_clay"
        />
        <TextView
                android:text="@string/wilson_roland_garros_clay"
                android:id="@+id/wilsonRGC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:textStyle="bold"/>
        <TextView
                android:layout_width="311dp"
                android:layout_height="168dp"
                android:text="Piłki tenisowe Wilson Roland Garros Clay Court. Piłka klasy Premium w mocno jaskrawym żółtym filcu zapewnia lepszą widoczność a unikalne włókno z filcu, zapewniające doskonały komfort i łatwość gry. Dodatkowo charakteryzuje się długą wytrzymałością. Zaakceptowana przez ITF. Certyfikat USTA. Konstrukcja piłek dedykowana na nawierzchnie ceglane."
                android:layout_margin="100dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="417dp"
            android:layout_height="254dp"
            app:layout_constraintTop_toBottomOf="@id/wilsonUS"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/wilsonTriniti">
        <TextView
                android:text="Wytrzymałość: 7/10 Twardość: 8/10 Ocena: 7.5/10"
                android:layout_width="144dp"
                android:layout_height="wrap_content" android:id="@+id/textView9"
                android:layout_marginLeft="100dp" android:layout_marginTop="30dp"/>
        <ImageView
                android:layout_width="91dp"
                android:layout_height="214dp"
                app:srcCompat="@drawable/wilson_triniti"
        />
        <TextView
                android:text="@string/wilson_triniti"
                android:id="@+id/wilsonTri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:textStyle="bold"/>
        <TextView
                android:layout_width="311dp"
                android:layout_height="168dp"
                android:text="Piłki tenisowe Wilson Triniti. Przeznaczona dla profesjonalistów i amatorów. Rdzeń piłki Engage Core wykonany z unikatowego materiału o nazwie plastomer, który znacząco wydłuża czucie - aż o 400%! STR Felt wzmacnia wytrzymałość i jest 50% elastyczny, niż standardowa piłka. Przekłada się to na lepsze czucie i kontrolę. Dzięki tym materiałom piłka dłużej zachowuje swoje właściwości będąc poza hermetycznie zamkniętą puszką"
                android:layout_margin="100dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="417dp"
            android:layout_height="254dp"
            app:layout_constraintTop_toBottomOf="@+id/wilsonTourClay"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/wilsonUS">
        <TextView
                android:text="Wytrzymałość: 7/10 Twardość: 8/10 Ocena: 8/10"
                android:layout_width="144dp"
                android:layout_height="wrap_content" android:id="@+id/textView9"
                android:layout_marginLeft="100dp" android:layout_marginTop="30dp"/>
        <ImageView
                android:layout_width="91dp"
                android:layout_height="214dp"
                app:srcCompat="@drawable/wilson_us_open"
        />
        <TextView
                android:text="@string/wilson_us_open"
                android:id="@+id/wilsonUSOp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:textStyle="bold"/>
        <TextView
                android:layout_width="311dp"
                android:layout_height="168dp"
                android:text="Od 1979 r. oficjalna piłka turnieju US OPEN. Posiada najwyższej jakości filc wełniany, idealna na każdą nawierzchnię. Zaaprobowana przez ITF, PZT, a także m.in USTA, FFT. Przy produkcji swoich piłek Wilson wykorzystuje nowoczesne technologie, by w jak najwiekszym stopniu ograniczyć utratę powietrza z wewnątrz piłki na zewnątrz."
                android:layout_margin="100dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="417dp"
            android:layout_height="254dp"
            app:layout_constraintTop_toBottomOf="@+id/wilsonTour"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/wilsonTourClay">
        <TextView
                android:text="Wytrzymałość: 7/10 Twardość: 6/10 Ocena: 7/10"
                android:layout_width="144dp"
                android:layout_height="wrap_content" android:id="@+id/textView9"
                android:layout_marginLeft="100dp" android:layout_marginTop="30dp"/>
        <ImageView
                android:layout_width="91dp"
                android:layout_height="214dp"
                app:srcCompat="@drawable/wilson_tour_premier_clay_court"
        />
        <TextView
                android:text="@string/wilson_tour_premier_clay_court"
                android:id="@+id/wilsonTPCC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:textStyle="bold"/>
        <TextView
                android:layout_width="311dp"
                android:layout_height="168dp"
                android:text="Piłki tenisowe Wilson Tour Premier w mocno jaskrawym żółtym filcu zapewnia lepszą widoczność a unikalne włókno z filcu, zapewniające doskonały komfort i łatwość gry. Dodatkowo charakteryzuje się długą wytrzymałością. Zaakceptowana przez ITF. Lekko zmodyfikowana konstrukcja dedykowana na nawierzchnie ceglane."
                android:layout_margin="100dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="417dp"
            android:layout_height="254dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/wilsonTour">
        <TextView
                android:text="Wytrzymałość: 8/10 Twardość: 8/10 Ocena: 8.5/10"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:layout_marginTop="30dp"/>
        <ImageView
                android:layout_width="91dp"
                android:layout_height="214dp"
                app:srcCompat="@drawable/wilson_tour_premier_all_court"
        />
        <TextView
                android:text="@string/wilson_tour_premier_all_court"
                android:id="@+id/wilsonTPAC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:textStyle="bold"/>
        <TextView
                android:layout_width="306dp"
                android:layout_height="141dp"
                android:text="Piłki tenisowe Wilson Tour Premier w mocno jaskrawym żółtym filcu zapewnia lepszą widoczność a unikalne włókno z filcu, zapewniające doskonały komfort i łatwość gry. Piłka ta została zaprojektowana na wzór piłki Wilson Australian Open. Dodatkowo charakteryzuje się długą wytrzymałością. Zaakceptowana przez ITF. "
                android:layout_margin="100dp"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
