<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="false">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.company.RobinSoderlingFragment">

    <androidx.cardview.widget.CardView
            android:layout_width="417dp"
            android:layout_height="254dp"
            tools:layout_constraintTop_toBottomOf="@id/RSallBlack"
            app:layout_constraintTop_toBottomOf="@+id/RSallBlack" android:id="@+id/RStour"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="50dp">
        <TextView
                android:text="Wytrzymałość: 7/10 Twardość: 7/10 Ocena: 8/10"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:layout_marginTop="30dp"/>
        <ImageView
                android:layout_width="91dp"
                android:layout_height="214dp"
                app:srcCompat="@drawable/soderling_te"
        />
        <TextView
                android:text="@string/robin_soderling_tour_edition"
                android:id="@+id/RStourE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:textStyle="bold"/>
        <TextView
                android:layout_width="306dp"
                android:layout_height="141dp"
                android:text="Najnowsza propozycja w segmencie piłek tenisowych - Soderling Tour Edition. Piłka klasy zawodniczej, najwyższa jakość wykonania i zastosowanych materiałów. Opracowana w ścisłej współpracy z jednym z najlepszych tenisistów ostatnich lat - Robina Soderlinga. Specjalnie zaprojektowana do gry na wszystkich nawierzchniach. "
                android:layout_margin="100dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="417dp"
            android:layout_height="254dp"
            tools:layout_constraintTop_toBottomOf="@id/RSclub" android:id="@+id/RSallBlack"
            app:layout_constraintTop_toBottomOf="@+id/RSclub">
        <TextView
                android:text="Wytrzymałość: 7/10 Twardość: 7/10 Ocena: 8/10"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:layout_marginTop="30dp"/>
        <ImageView
                android:layout_width="91dp"
                android:layout_height="214dp"
                app:srcCompat="@drawable/soderling_ac"
        />
        <TextView
                android:text="@string/robin_soderling_all_black"
                android:id="@+id/RSallB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:textStyle="bold"/>
        <TextView
                android:layout_width="306dp"
                android:layout_height="141dp"
                android:text="Najnowsza propozycja w segmencie piłek tenisowych - Soderling All Court Black Edition. Piłka klasy zawodniczej, najwyższa jakość wykonania i zastosowanych materiałów. Opracowana w ścisłej współpracy z jednym z najlepszych tenisistów ostatnich lat - Robina Soderlinga. Specjalnie zaprojektowana do gry na wszystkich nawierzchniach. "
                android:layout_margin="100dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="417dp"
            android:layout_height="254dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/RSclub" app:layout_constraintBottom_toTopOf="@id/RSallBlack">
        <TextView
                android:text="Wytrzymałość: 6/10 Twardość: 7/10 Ocena: 7/10"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:layout_marginTop="30dp"/>
        <ImageView
                android:layout_width="91dp"
                android:layout_height="214dp"
                app:srcCompat="@drawable/soderling_club_edition"
        />
        <TextView
                android:text="@string/robin_soderling_club_edition"
                android:id="@+id/RSce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp" android:textStyle="bold"/>
        <TextView
                android:layout_width="306dp"
                android:layout_height="141dp"
                android:text="Głównym celelem towarzyszącym przy tworzeniu piłki Soderling Club Edition było połączenie niebywałej wytrzymałości i komfortu. Piłka stworzona jest z najwyżej jakości komponentów. Idealny wybór dla graczy klubowych."
                android:layout_margin="100dp"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
